--- a/src/sample/GUI/GUI_ForgotPassword.fxml
+++ b/src/sample/GUI/GUI_ForgotPassword.fxml
@@ -22,9 +22,9 @@
             <Image url="@../photos/logo-float.png" />
          </image>
       </ImageView>
-      <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#sendEmail" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #8cd1ff;" text="SEND " textFill="WHITE" />
-      <Button layoutX="318.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="HELP" textFill="WHITE" />
-      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #cccccc;" text="CANCEL" textFill="WHITE" />
+      <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#sendEmail" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #66ccff;" text="SEND " textFill="WHITE" />
+      <Button layoutX="318.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #a6a6a6;" text="HELP" textFill="WHITE" />
+      <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: #a6a6a6;" text="CANCEL" textFill="WHITE" />
       <Separator layoutX="90.0" layoutY="201.0" prefWidth="200.0" />
       <Text fill="WHITE" layoutX="93.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forgot your password?">
          <font>
